--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,14 @@ h1 {
     border: blue 2px solid;
 }
 
+a {
+    color: cyan;
+}
+
+a:visited {
+    color: lightblue;
+}
+
 h2 {
     font-size: 2rem;
 
@@ -681,7 +689,7 @@ NAVIGATION
 ****************************************************************
 */
 .nav-link {
-    color: white;
+    color: white !important;
     text-decoration: none;
     font-weight: bold;
     text-transform: uppercase;
